z-index fix

--- a/assets/CSS/output.css
+++ b/assets/CSS/output.css
@@ -70,10 +70,10 @@
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-gray-900: oklch(21% 0.034 264.665);
     --color-gray-950: oklch(13% 0.028 261.692);
+    --color-zinc-500: oklch(55.2% 0.016 285.938);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-lg: 32rem;
-    --container-xl: 36rem;
     --container-7xl: 80rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -81,8 +81,6 @@
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
     --text-base--line-height: calc(1.5 / 1);
-    --text-lg: 1.125rem;
-    --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
@@ -714,14 +712,17 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-2 {
     top: calc(var(--spacing) * 2);
   }
   .top-2\.5 {
     top: calc(var(--spacing) * 2.5);
+  }
+  .top-\[calc\(50\%-20px\)\] {
+    top: calc(50% - 20px);
+  }
+  .top-\[calc\(50\%-60px\)\] {
+    top: calc(50% - 60px);
   }
   .top-\[calc\(50\%-130px\)\] {
     top: calc(50% - 130px);
@@ -756,9 +757,6 @@
   .bottom-1 {
     bottom: calc(var(--spacing) * 1);
   }
-  .bottom-15 {
-    bottom: calc(var(--spacing) * 15);
-  }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
@@ -767,9 +765,6 @@
   }
   .left-1\/2 {
     left: calc(1 / 2 * 100%);
-  }
-  .z-5 {
-    z-index: 5;
   }
   .z-10 {
     z-index: 10;
@@ -789,8 +784,14 @@
   .z-50 {
     z-index: 50;
   }
+  .z-51 {
+    z-index: 51;
+  }
   .z-60 {
     z-index: 60;
+  }
+  .z-61 {
+    z-index: 61;
   }
   .order-1 {
     order: 1;
@@ -1689,20 +1690,11 @@
   .w-75 {
     width: calc(var(--spacing) * 75);
   }
-  .w-\[30px\] {
-    width: 30px;
-  }
   .w-fit {
     width: fit-content;
   }
   .w-full {
     width: 100%;
-  }
-  .max-w-27 {
-    max-width: calc(var(--spacing) * 27);
-  }
-  .max-w-27\.5 {
-    max-width: calc(var(--spacing) * 27.5);
   }
   .max-w-32 {
     max-width: calc(var(--spacing) * 32);
@@ -1721,18 +1713,6 @@
   }
   .max-w-115 {
     max-width: calc(var(--spacing) * 115);
-  }
-  .max-w-\[1\] {
-    max-width: 1;
-  }
-  .max-w-\[110px\] {
-    max-width: 110px;
-  }
-  .max-w-\[120px\] {
-    max-width: 120px;
-  }
-  .max-w-\[130px\] {
-    max-width: 130px;
   }
   .max-w-lg {
     max-width: var(--container-lg);
@@ -1943,9 +1923,6 @@
   .gap-14\.5 {
     gap: calc(var(--spacing) * 14.5);
   }
-  .gap-\[30px\] {
-    gap: 30px;
-  }
   .space-y-1 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
@@ -2143,9 +2120,6 @@
   .border-bank-cards-border-color {
     border-color: var(--color-bank-cards-border-color);
   }
-  .border-dark-bg {
-    border-color: var(--color-dark-bg);
-  }
   .border-default {
     border-color: var(--color-default);
   }
@@ -2297,6 +2271,9 @@
       fill: white !important;
     }
   }
+  .fill-zinc-500 {
+    fill: var(--color-zinc-500);
+  }
   .apexcharts-gridline {
     stroke: var(--color-default) !important;
     .dark & {
@@ -2334,9 +2311,6 @@
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
-  .p-0\.5 {
-    padding: calc(var(--spacing) * 0.5);
-  }
   .p-1 {
     padding: calc(var(--spacing) * 1);
   }
@@ -2351,12 +2325,6 @@
   }
   .p-5 {
     padding: calc(var(--spacing) * 5);
-  }
-  .px-0 {
-    padding-inline: calc(var(--spacing) * 0);
-  }
-  .px-0\.5 {
-    padding-inline: calc(var(--spacing) * 0.5);
   }
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
@@ -2601,9 +2569,6 @@
   .text-\[10\.5px\] {
     font-size: 10.5px;
   }
-  .text-\[10px\] {
-    font-size: 10px;
-  }
   .text-\[12px\] {
     font-size: 12px;
   }
@@ -2758,12 +2723,6 @@
   }
   .ring-transparent {
     --tw-ring-color: transparent;
-  }
-  .inset-shadow-success-medium {
-    --tw-inset-shadow-color: oklch(95% 0.052 163.051);
-    @supports (color: color-mix(in lab, red, red)) {
-      --tw-inset-shadow-color: color-mix(in oklab, var(--color-success-medium) var(--tw-inset-shadow-alpha), transparent);
-    }
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -2952,11 +2911,6 @@
   .max-sm\:w-full {
     @media (width < 40rem) {
       width: 100%;
-    }
-  }
-  .xs\:h-62\.5 {
-    @media (width >= 450px) {
-      height: calc(var(--spacing) * 62.5);
     }
   }
   .xs\:w-100 {
